[package]
name = "build-context"
version = "0.1.1"
edition = "2018"
rust-version = "1.45"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/build-context"
keywords = []
categories = ["no-std", "no-std::no-alloc"]
exclude = ["/.*", "/tools"]
description = """
Make build environment/target information available as constants in normal libraries and binaries.
"""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.cargo_check_external_types]
# The following are external types that are allowed to be exposed in our public API.
allowed_external_types = []

[workspace]

[lib]
doc-scrape-examples = false

[dependencies]

[dev-dependencies]
